--- a/all/themes/pixelgarage/scss/mixins/components/_stripe-buttons.scss
+++ b/all/themes/pixelgarage/scss/mixins/components/_stripe-buttons.scss
@@ -158,7 +158,7 @@ $form-control-height: 38px;
     .fee-radios-wrapper {
       display: flex;
       justify-content: center;
-      align-items: stretch;
+      align-items: flex-end;
       margin-bottom: 20px;
 
       .fee-radio {
